--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -85,3 +85,12 @@
   biburl    = {https://dblp.org/rec/journals/corr/RussakovskyDSKSMHKKBBF14.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+
+@inproceedings{ordinalregression,
+  title={A neural network approach to ordinal regression},
+  author={Cheng, Jianlin and Wang, Zheng and Pollastri, Gianluca},
+  booktitle={2008 IEEE International Joint Conference on Neural Networks (IEEE World Congress on Computational Intelligence)},
+  pages={1279--1284},
+  year={2008},
+  organization={IEEE}
+}
