Final doc tranne per ciccio

--- a/doc/intro.tex
+++ b/doc/intro.tex
@@ -1,5 +1,5 @@
 In questo progetto affrontiamo il problema della stima dell'età di un essere umano a partire da immagini del volto attraverso l'utilizzo di reti neurali profonde. 
-In particolare, lo scopo che ci prefiggiamo è quello di addestrare una rete neurale profonda sul dataset \emph{VGG-Face2 Mivia Age}, anche detto \emph{VMAGE} \cite{miviaage}, che garantisca le migliori performance possibili sul test set associato a questo dataset, rispettando i seguenti requisiti.
+In particolare, lo scopo che ci prefiggiamo è quello di addestrare una rete neurale profonda sul dataset \emph{VGG-Face2 Mivia Age} (VMAGE) \cite{miviaage}, che garantisca le migliori performance possibili sul test set associato a questo dataset, rispettando i seguenti requisiti.
 
 \begin{itemize}
 	\item Non richieda, per quanto possibile, risorse computazionali eccessive, dal momento che per l'addestramento sarà utilizzata la piattaforma Google Colab\footnote{\url{https://colab.research.google.com/}}, che offre potenza computazionale limitata e permette l'accesso alle sue risorse per un massimo di 12 ore consecutive, per poi sottoporre l'utente ad un ban temporaneo.
