Small small update

--- a/doc/risultati.tex
+++ b/doc/risultati.tex
@@ -52,7 +52,7 @@ In primo luogo notiamo come le prestazioni dei modelli addestrati su epoche \emp
 
 Il secondo elemento di riflessione è dato dal fatto che il regressore con input size $96 \times 96$ presenta una differenza del MAE sul validation set inferiore ad un anno rispetto a quello con input size $224 \times 224$. Questo è frutto sicuramente delle buone capacità di generalizzazione ottenute nonostante la minore input size, ma anche del fatto che molte immagini nel dataset hanno dimensioni davvero ridotte, per cui sono relativamente pochi i campioni sui quali una maggiore dimensione di input riesce a fare la differenza.
 
-\todo{Il classificatore è forte, Tempi di esecuzione}
+Infine notiamo che, nonostante i pochissimi esperimenti fatti, il classificatore sembra il più promettente tra gli approcci.
 
 \subsection{Riguardo il classificatore}
 
